# C-Kludge

./: .gitignore  CMakeLists.txt  README.md  Stack.h
Asm/: Assembler.cpp
CommonFiles/: asmCode.txt  commandsAsm&CPU.h  factorial.txt  factorialCore.txt  fileworking.h  machCode.txt
Example/: asmCode.txt  factorial.txt  kvadrat.txt  machCode.txt
Example/Asemmbler/: factorial.txt
Example/Assembler/: squareEquation.txt
Example/Compiler/CodeExamples/: factorial.txt  square.txt
Example/Compiller/CodeExamples/: base.txt
Example/Compiller/Graphs/: dotDump.txt
Example/Cpu/: factorialCore.txt  squaerEqCore.txt  squareEquationCore.txt
Source/: Assembler.c  Assembler.h  Commands.h  main.c
Source/Assembler/: Assembler  Assembler.c  Assembler.h  main.c
Source/Compiler/: main.c
Source/Compiler/AsmCodes/: asmCode.txt  forCpu
Source/Compiler/Nasm/: HexTranslation.h
Source/Compiler/RecursiveDescent/: Commands.h  Descent.c
Source/Compiler/x86-64/: Opcodes.h  elfCompile.h
Source/Compiller/: CMakeLists.txt  Compiller
Source/Compiller/AsmTranslation/: ToAsm.c  ToAsm.h
Source/Compiller/Graphs/: dotPrint.txt
Source/Compiller/Nasm/: HexTranslation.c  Nasm.cpp  Nasm.h
Source/Cpu/: Cpu  cpu  cpu.h  main.cpp  stack.h  vector.h
Stack/: Stack.h
VCPU/: CMakeLists.txt  CPU.h  main.cpp
differentiator/: CMakeLists.txt
differentiator/Diff/: Diff.cpp  Diff.h  MathFunc.h  main.cpp
differentiator/Dumps/: base.txt
differentiator/Tree_t/: Tree.cpp  Tree.h
differentiator/base/: base.txt
differentiator/picture/: dotDump.txt  dotPrint.txt
(+4 files in other folders)
